updated docker-compose.yml in devcontainer

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -31,7 +31,15 @@ services:
     #   - seccomp:unconfined
 
     # Overrides default command so things don't shut down after the process ends.
-    command: sleep infinity 
+    command: sleep infinity
+
+  minimal-ubuntu:
+    build:
+      context: ../build
+      dockerfile: ./krb5-ubuntu/Dockerfile
+    image: minimal-ubuntu
+    command: "true"
+    entrypoint: "true"
     
   machine-example-com:
     build: 
