--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -54,7 +54,7 @@ services:
     #    ipv4_address: 10.5.0.1
 
     volumes:
-      - /workspace:/root/share
+      - ./:/root/share
 
   kdc-server-example-com:
     build: 
@@ -69,7 +69,7 @@ services:
     #    ipv4_address: 10.5.0.2
 
     volumes:
-      - /workspace:/root/share
+      - ./:/root/share
 
   service-example-com:
     build: 
@@ -84,5 +84,5 @@ services:
     #    ipv4_address: 10.5.0.3
 
     volumes:
-      - /workspace:/root/share
+      - ./:/root/share
   
