--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -64,6 +64,8 @@ services:
     container_name: krb5-kdc-server-example-com
     hostname: krb5-kdc-server-example-com
     domainname: example.com
+    ports:
+      - 10000:10000
     #networks:
     #  example.com:
     #    ipv4_address: 10.5.0.2
